--- a/src/main/resources/templates/auth/twitch/index.html
+++ b/src/main/resources/templates/auth/twitch/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/Quick-Community/site/main/styles/style.css"/>
-    <link rel="icon" href="https://raw.githubusercontent.com/Quick-Community/site/main/imgs/logo.png"/>
+    <link rel="stylesheet" href="https://cdn.quickfirecorp.ru/web/styles/style.css"/>
+    <link rel="icon" href="https://cdn.quickfirecorp.ru/web/imgs/logo.png"/>
     <title>REE6 | Twitch</title>
     <style>
         footer {
@@ -138,9 +138,9 @@
         </div>
         <div class="nav-list">
             <strong>Legal</strong>
-            <a href="https://raw.githubusercontent.com/Quick-Community/site/main/privacy/">Privacy Policy</a>
-            <a href="https://raw.githubusercontent.com/Quick-Community/site/main/impressum/">Impressum</a>
-            <a href="https://raw.githubusercontent.com/Quick-Community/site/main/protection/">Data Protection</a>
+            <a href="https://cdn.quickfirecorp.ru/web/privacy/">Privacy Policy</a>
+            <a href="https://cdn.quickfirecorp.ru/web/impressum/">Impressum</a>
+            <a href="https://cdn.quickfirecorp.ru/web/protection/">Data Protection</a>
             <button
                     data-copy="legal@raw.githubusercontent.com/Quick-Community/site/main"
                     data-color-background="#ef2222"
@@ -195,11 +195,11 @@
         >
         ©Ree6 <span data-time="0"></span>
     </div>
-    <script src="https://raw.githubusercontent.com/Quick-Community/site/main/js/time.js"></script>
-    <script src="https://raw.githubusercontent.com/Quick-Community/site/main/js/navigation.js"></script>
-    <script src="https://raw.githubusercontent.com/Quick-Community/site/main/js/cursor.js"></script>
-    <script src="https://raw.githubusercontent.com/Quick-Community/site/main/js/vanilla-tilt.js"></script>
-    <script src="https://raw.githubusercontent.com/Quick-Community/site/main/js/logging.js"></script>
+    <script src="https://cdn.quickfirecorp.ru/web/js/time.js"></script>
+    <script src="https://cdn.quickfirecorp.ru/web/js/navigation.js"></script>
+    <script src="https://cdn.quickfirecorp.ru/web/js/cursor.js"></script>
+    <script src="https://cdn.quickfirecorp.ru/web/js/vanilla-tilt.js"></script>
+    <script src="https://cdn.quickfirecorp.ru/web/js/logging.js"></script>
 </footer>
 </body>
 </html>
