--- a/src/main/resources/templates/main/index.html
+++ b/src/main/resources/templates/main/index.html
@@ -4,8 +4,8 @@
    <meta charset="UTF-8" />
    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <link rel="stylesheet" href="https://raw.githubusercontent.com/Quick-Community/site/main/styles/style.css" />
-   <link rel="icon" href="https://raw.githubusercontent.com/Quick-Community/site/main/imgs/logo.png" />
+   <link rel="stylesheet" href="https://cdn.quickfirecorp.ru/web/styles/style.css" />
+   <link rel="icon" href="https://cdn.quickfirecorp.ru/web/imgs/logo.png" />
    <style>
       @media only screen and (max-width: 1650px) {
          section#home {
@@ -51,9 +51,9 @@
       <a href="/#home" aria-disabled="true">Home</a>
       <a href="/#features" aria-disabled="true">Features</a>
       <a href="/#team" aria-disabled="true">Team</a>
-      <a href="https://raw.githubusercontent.com/Quick-Community/site/main/#invite" aria-disabled="true">Invite</a>
-      <a th:if="${isLogged}" th:href="@{'/panel'}" href="https://cp.raw.githubusercontent.com/Quick-Community/site/main/panel">Dashboard</a>
-      <a th:unless="${isLogged}" th:href="@{'/discord/auth'}" href="https://cp.raw.githubusercontent.com/Quick-Community/site/main/discord/auth">Login</a>
+      <a href="https://cdn.quickfirecorp.ru/web/#invite" aria-disabled="true">Invite</a>
+      <a th:if="${isLogged}" th:href="@{'/panel'}" href="https://cp.cdn.quickfirecorp.ru/web/panel">Dashboard</a>
+      <a th:unless="${isLogged}" th:href="@{'/discord/auth'}" href="https://cp.cdn.quickfirecorp.ru/web/discord/auth">Login</a>
    </nav>
    <button class="hamburger-button">
       <span class="line-one"></span>
@@ -61,12 +61,12 @@
    </button>
    <nav class="hamburger-wrapper">
       <div class="hamburger-container">
-         <a href="https://raw.githubusercontent.com/Quick-Community/site/main/#home" aria-disabled="true"><span>Home</span></a>
-         <a href="https://raw.githubusercontent.com/Quick-Community/site/main/#features" aria-disabled="true"><span>Features</span></a>
-         <a href="https://raw.githubusercontent.com/Quick-Community/site/main/#team" aria-disabled="true"><span>Team</span></a>
-         <a href="https://raw.githubusercontent.com/Quick-Community/site/main/#invite" aria-disabled="true"><span>Invite</span></a>
-         <a th:if="${isLogged}" th:ref="@{'/panel'}" href="https://cp.raw.githubusercontent.com/Quick-Community/site/main/panel"><span>Dashboard</span></a>
-         <a th:unless="${isLogged}" th:ref="@{'/discord/auth'}" href="https://cp.raw.githubusercontent.com/Quick-Community/site/main/discord/auth"><span>Login</span></a>
+         <a href="https://cdn.quickfirecorp.ru/web/#home" aria-disabled="true"><span>Home</span></a>
+         <a href="https://cdn.quickfirecorp.ru/web/#features" aria-disabled="true"><span>Features</span></a>
+         <a href="https://cdn.quickfirecorp.ru/web/#team" aria-disabled="true"><span>Team</span></a>
+         <a href="https://cdn.quickfirecorp.ru/web/#invite" aria-disabled="true"><span>Invite</span></a>
+         <a th:if="${isLogged}" th:ref="@{'/panel'}" href="https://cp.cdn.quickfirecorp.ru/web/panel"><span>Dashboard</span></a>
+         <a th:unless="${isLogged}" th:ref="@{'/discord/auth'}" href="https://cp.cdn.quickfirecorp.ru/web/discord/auth"><span>Login</span></a>
       </div>
    </nav>
 </header>
@@ -92,10 +92,10 @@
                  data-yaxis="0.1"
                  data-color-background="#ea0f77"
          >
-            <img src="https://raw.githubusercontent.com/Quick-Community/site/main/imgs/ree6-logo.png" alt="REE6 Avatar Image" />
+            <img src="https://cdn.quickfirecorp.ru/web/imgs/ree6-logo.png" alt="REE6 Avatar Image" />
          </div>
          <a
-                 href="https://invite.raw.githubusercontent.com/Quick-Community/site/main"
+                 href="https://invite.cdn.quickfirecorp.ru/web"
                  target="_blank"
                  data-highlight=""
                  data-color-dot="#fff"
@@ -113,7 +113,7 @@
               data-yaxis="0.12"
               data-color-background="#ea0f77"
       >
-         <img src="https://raw.githubusercontent.com/Quick-Community/site/main/imgs/ree6-logo.png" alt="REE6 Avatar Image" />
+         <img src="https://cdn.quickfirecorp.ru/web/imgs/ree6-logo.png" alt="REE6 Avatar Image" />
       </div>
    </section>
    <section id="features">
@@ -125,7 +125,7 @@
                  data-color-background="#ea0f77"
          >
             <div class="inner-img-wrapper feature-active">
-               <img src="https://raw.githubusercontent.com/Quick-Community/site/main/imgs/moderation.svg" alt="Moderation Icon" />
+               <img src="https://cdn.quickfirecorp.ru/web/imgs/moderation.svg" alt="Moderation Icon" />
             </div>
          </button>
          <span
@@ -143,7 +143,7 @@
                  data-color-background="#ea0f77"
          >
             <div class="inner-img-wrapper">
-               <img src="https://raw.githubusercontent.com/Quick-Community/site/main/imgs/music.svg" alt="Music Icon" />
+               <img src="https://cdn.quickfirecorp.ru/web/imgs/music.svg" alt="Music Icon" />
             </div>
          </button>
          <button
@@ -152,7 +152,7 @@
                  data-color-background="#ea0f77"
          >
             <div class="inner-img-wrapper">
-               <img src="https://raw.githubusercontent.com/Quick-Community/site/main/imgs/funcommands.svg" alt="Fun Commands Icon" />
+               <img src="https://cdn.quickfirecorp.ru/web/imgs/funcommands.svg" alt="Fun Commands Icon" />
             </div>
          </button>
          <span class="text right" data-label="feature" aria-label="commands"
@@ -167,7 +167,7 @@
                  data-color-background="#ea0f77"
          >
             <div class="inner-img-wrapper">
-               <img src="https://raw.githubusercontent.com/Quick-Community/site/main/imgs/logging.svg" alt="Advanced Logging Icon" />
+               <img src="https://cdn.quickfirecorp.ru/web/imgs/logging.svg" alt="Advanced Logging Icon" />
             </div>
          </button>
          <button
@@ -176,7 +176,7 @@
                  data-color-background="#ea0f77"
          >
             <div class="inner-img-wrapper">
-               <img src="https://raw.githubusercontent.com/Quick-Community/site/main/imgs/voice.svg" alt="Voice Icon" />
+               <img src="https://cdn.quickfirecorp.ru/web/imgs/voice.svg" alt="Voice Icon" />
             </div>
          </button>
          <span class="text right" data-label="feature" aria-label="voice"
@@ -194,7 +194,7 @@
                  data-color-background="#ea0f77"
          >
             <div class="inner-img-wrapper">
-               <img src="https://raw.githubusercontent.com/Quick-Community/site/main/imgs/configure.svg" alt="Configuration Icon" />
+               <img src="https://cdn.quickfirecorp.ru/web/imgs/configure.svg" alt="Configuration Icon" />
             </div>
          </button>
       </div>
@@ -208,7 +208,7 @@
             and automatic moderative actions.
          </p>
          <a
-                 href="https://invite.raw.githubusercontent.com/Quick-Community/site/main"
+                 href="https://invite.cdn.quickfirecorp.ru/web"
                  target="_blank"
                  rel="noopener noreferrer"
                  class="fade-in"
@@ -267,7 +267,7 @@
                     data-color-dot="#fff"
                     class="fade-in"
             >
-               <img src="https://raw.githubusercontent.com/Quick-Community/site/main/imgs/yt.svg" alt="YouTube Logo" />
+               <img src="https://cdn.quickfirecorp.ru/web/imgs/yt.svg" alt="YouTube Logo" />
             </a>
             <a
                     href="https://twitter.com/memerinoto"
@@ -278,7 +278,7 @@
                     data-color-dot="#fff"
                     class="fade-in"
             >
-               <img src="https://raw.githubusercontent.com/Quick-Community/site/main/imgs/twitter.svg" alt="Twitter Logo" />
+               <img src="https://cdn.quickfirecorp.ru/web/imgs/twitter.svg" alt="Twitter Logo" />
             </a>
             <a
                     href="https://www.instagram.com/unknown._.pog/"
@@ -289,21 +289,21 @@
                     data-color-dot="#fff"
                     class="fade-in"
             >
-               <img src="https://raw.githubusercontent.com/Quick-Community/site/main/imgs/ig.svg" alt="Instagram Logo" />
+               <img src="https://cdn.quickfirecorp.ru/web/imgs/ig.svg" alt="Instagram Logo" />
             </a>
          </div>
          <div class="avatar-wrapper fade-in">
-            <img src="https://raw.githubusercontent.com/Quick-Community/site/main/imgs/presti.jpg" alt="Presti Avatar" />
+            <img src="https://cdn.quickfirecorp.ru/web/imgs/presti.jpg" alt="Presti Avatar" />
          </div>
          <div class="member-info">
             <h2 class="fade-in">
                Presti
                <span class="check-mark"
-               ><img src="https://raw.githubusercontent.com/Quick-Community/site/main/imgs/check.svg" alt="Check Mark"
+               ><img src="https://cdn.quickfirecorp.ru/web/imgs/check.svg" alt="Check Mark"
                /></span>
             </h2>
             <div class="avatar-wrapper fade-in">
-               <img src="https://raw.githubusercontent.com/Quick-Community/site/main/imgs/presti.jpg" alt="Presti Avatar" />
+               <img src="https://cdn.quickfirecorp.ru/web/imgs/presti.jpg" alt="Presti Avatar" />
             </div>
             <div class="stats fade-in">
                <div class="age fade-in">
@@ -333,7 +333,7 @@
                     data-color-dot="#fff"
                     class="fade-in"
             >
-               <img src="https://raw.githubusercontent.com/Quick-Community/site/main/imgs/yt.svg" alt="YouTube Logo" />
+               <img src="https://cdn.quickfirecorp.ru/web/imgs/yt.svg" alt="YouTube Logo" />
             </a>
             <a
                     href="https://twitter.com/SolastisDev"
@@ -344,21 +344,21 @@
                     data-color-dot="#fff"
                     class="fade-in"
             >
-               <img src="https://raw.githubusercontent.com/Quick-Community/site/main/imgs/twitter.svg" alt="Twitter Logo" />
+               <img src="https://cdn.quickfirecorp.ru/web/imgs/twitter.svg" alt="Twitter Logo" />
             </a>
          </div>
          <div class="avatar-wrapper fade-in">
-            <img src="https://raw.githubusercontent.com/Quick-Community/site/main/imgs/xasus.jpg" alt="Xazed Avatar" />
+            <img src="https://cdn.quickfirecorp.ru/web/imgs/xasus.jpg" alt="Xazed Avatar" />
          </div>
          <div class="member-info">
             <h2 class="fade-in">
                xazed
                <span class="check-mark"
-               ><img src="https://raw.githubusercontent.com/Quick-Community/site/main/imgs/check.svg" alt="Check Mark"
+               ><img src="https://cdn.quickfirecorp.ru/web/imgs/check.svg" alt="Check Mark"
                /></span>
             </h2>
             <div class="avatar-wrapper fade-in">
-               <img src="https://raw.githubusercontent.com/Quick-Community/site/main/imgs/xasus.jpg" alt="Xazed Avatar" />
+               <img src="https://cdn.quickfirecorp.ru/web/imgs/xasus.jpg" alt="Xazed Avatar" />
             </div>
             <div class="stats fade-in">
                <div class="age fade-in">
@@ -388,7 +388,7 @@
                     data-color-dot="#fff"
                     class="fade-in"
             >
-               <img src="https://raw.githubusercontent.com/Quick-Community/site/main/imgs/yt.svg" alt="YouTube Logo" />
+               <img src="https://cdn.quickfirecorp.ru/web/imgs/yt.svg" alt="YouTube Logo" />
             </a>
             <a
                     href="https://twitter.com/davidjordan2006"
@@ -399,21 +399,21 @@
                     data-color-dot="#fff"
                     class="fade-in"
             >
-               <img src="https://raw.githubusercontent.com/Quick-Community/site/main/imgs/twitter.svg" alt="Twitter Logo" />
+               <img src="https://cdn.quickfirecorp.ru/web/imgs/twitter.svg" alt="Twitter Logo" />
             </a>
          </div>
          <div class="avatar-wrapper fade-in">
-            <img src="https://raw.githubusercontent.com/Quick-Community/site/main/imgs/david.jpg" alt="David Avatar" />
+            <img src="https://cdn.quickfirecorp.ru/web/imgs/david.jpg" alt="David Avatar" />
          </div>
          <div class="member-info">
             <h2 class="fade-in">
                david
                <span class="check-mark"
-               ><img src="https://raw.githubusercontent.com/Quick-Community/site/main/imgs/check.svg" alt="Check Mark"
+               ><img src="https://cdn.quickfirecorp.ru/web/imgs/check.svg" alt="Check Mark"
                /></span>
             </h2>
             <div class="avatar-wrapper fade-in">
-               <img src="https://raw.githubusercontent.com/Quick-Community/site/main/imgs/david.jpg" alt="David Avatar" />
+               <img src="https://cdn.quickfirecorp.ru/web/imgs/david.jpg" alt="David Avatar" />
             </div>
             <div class="stats fade-in">
                <div class="age fade-in">
@@ -436,7 +436,7 @@
       </h1>
       <h2 data-parallax data-xaxis="0.3" data-yaxis="0">Will You?</h2>
       <a
-              href="https://invite.raw.githubusercontent.com/Quick-Community/site/main"
+              href="https://invite.cdn.quickfirecorp.ru/web"
               target="_blank"
               rel="noopener noreferrer"
               data-highlight=""
@@ -468,13 +468,13 @@
    <div class="footer-nav">
       <div class="nav-list">
          <strong>Navigation</strong>
-         <a href="https://raw.githubusercontent.com/Quick-Community/site/main/#home" aria-disabled="true">Home</a>
-         <a href="https://raw.githubusercontent.com/Quick-Community/site/main/#features" aria-disabled="true">Features</a>
-         <a href="https://raw.githubusercontent.com/Quick-Community/site/main/#team" aria-disabled="true">Team</a>
+         <a href="https://cdn.quickfirecorp.ru/web/#home" aria-disabled="true">Home</a>
+         <a href="https://cdn.quickfirecorp.ru/web/#features" aria-disabled="true">Features</a>
+         <a href="https://cdn.quickfirecorp.ru/web/#team" aria-disabled="true">Team</a>
          <a
                  data-color-background="#5865F2"
                  data-color-dot="#fff"
-                 href="https://invite.raw.githubusercontent.com/Quick-Community/site/main"
+                 href="https://invite.cdn.quickfirecorp.ru/web"
                  target="_blank"
                  rel="noopener noreferrer"
          >Invite</a
@@ -482,21 +482,21 @@
       </div>
       <div class="nav-list">
          <strong>Legal</strong>
-         <a href="https://raw.githubusercontent.com/Quick-Community/site/main/privacy/">Privacy Policy</a>
-         <a href="https://raw.githubusercontent.com/Quick-Community/site/main/impressum/">Impressum</a>
-         <a href="https://raw.githubusercontent.com/Quick-Community/site/main/protection/">Data Protection</a>
+         <a href="https://cdn.quickfirecorp.ru/web/privacy/">Privacy Policy</a>
+         <a href="https://cdn.quickfirecorp.ru/web/impressum/">Impressum</a>
+         <a href="https://cdn.quickfirecorp.ru/web/protection/">Data Protection</a>
          <button
                  data-color-background="#ef2222"
                  data-color-dot="#fff"
-                 data-copy="legal@raw.githubusercontent.com/Quick-Community/site/main"
+                 data-copy="legal@cdn.quickfirecorp.ru/web"
          >
-            legal@raw.githubusercontent.com/Quick-Community/site/main
+            legal@cdn.quickfirecorp.ru/web
          </button>
       </div>
       <div class="nav-list">
          <strong>Contact</strong>
          <a
-                 href="https://support.raw.githubusercontent.com/Quick-Community/site/main"
+                 href="https://support.cdn.quickfirecorp.ru/web"
                  target="_blank"
                  rel="noopener noreferrer"
          >Discord</a
@@ -514,11 +514,11 @@
          >Github</a
          >
          <button
-                 data-copy="support@raw.githubusercontent.com/Quick-Community/site/main"
+                 data-copy="support@cdn.quickfirecorp.ru/web"
                  data-color-background="#ef2222"
                  data-color-dot="#fff"
          >
-            support@raw.githubusercontent.com/Quick-Community/site/main
+            support@cdn.quickfirecorp.ru/web
          </button>
       </div>
    </div>
@@ -539,10 +539,10 @@
       >
       ©Ree6 <span data-time="0"></span>
    </div>
-   <script src="https://raw.githubusercontent.com/Quick-Community/site/main/js/time.js"></script>
-   <script src="https://raw.githubusercontent.com/Quick-Community/site/main/js/navigation.js"></script>
-   <script src="https://raw.githubusercontent.com/Quick-Community/site/main/js/cursor.js"></script>
-   <script src="https://raw.githubusercontent.com/Quick-Community/site/main/js/observer.js"></script>
+   <script src="https://cdn.quickfirecorp.ru/web/js/time.js"></script>
+   <script src="https://cdn.quickfirecorp.ru/web/js/navigation.js"></script>
+   <script src="https://cdn.quickfirecorp.ru/web/js/cursor.js"></script>
+   <script src="https://cdn.quickfirecorp.ru/web/js/observer.js"></script>
 </footer>
 </body>
 </html>
